Details
-
Bug
-
Resolution: Done
-
P2: Important
-
6.2.0 Alpha
-
None
-
-
62e7b5cc737db6c9fd29a04fc65a76d11db599bb (qt/qtserialbus/dev) adae7b569e307a327ebfc56d34292c64edc73b00 (qt/qtserialbus/6.2)
Description
Failing to connect with J2534 (passthrucan) on Qt 6.2.0 alpha, getting the following error message printed to console
QMetaObject::invokeMethod: No such method PassThruCanIO::applyConfig(int,QVariant)
Candidates are:
applyConfig(QCanBusDevice::ConfigurationKey,QVariant)