PassThruCan: Switch from invokeMethod to PMF overload

Fixes: QTBUG-94838
Change-Id: I29002db6dca6c5f2e19bd463c7f83f44cba2d009
Reviewed-by: Denis Shienkov <denis.shienkov@gmail.com>
Reviewed-by: Jonas Larsson <jonas.larsson@systemrefine.com>
Reviewed-by: Brett Stottlemyer <bstottle@ford.com>
(cherry picked from commit 62e7b5cc737db6c9fd29a04fc65a76d11db599bb)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>