src/plugins/canbus/passthrucan/passthrucanbackend.cpp
@@ -215,10 +215,9 @@ bool PassThruCanBackend::open()
     }
     m_ioThread.start();
 
-    return QMetaObject::invokeMethod(m_canIO, "open", Qt::QueuedConnection,
-                                     Q_ARG(QString, library),
-                                     Q_ARG(QByteArray, subDev),
-                                     Q_ARG(uint, bitRate));
+    return QMetaObject::invokeMethod(m_canIO, [this, library, subDev, bitRate] {
+                                        m_canIO->open(library, subDev, bitRate);
+                                     }, Qt::QueuedConnection);
 }
 
 void PassThruCanBackend::close()
@@ -227,7 +226,7 @@ void PassThruCanBackend::close()
         qCCritical(QT_CANBUS_PLUGINS_PASSTHRU, "Unexpected state on close");
         return;
     }
-    QMetaObject::invokeMethod(m_canIO, "close", Qt::QueuedConnection);
+    QMetaObject::invokeMethod(m_canIO, &PassThruCanIO::close, Qt::QueuedConnection);
 }
 
 void PassThruCanBackend::ackOpenFinished(bool success)
@@ -250,7 +249,7 @@ void PassThruCanBackend::ackOpenFinished(bool success)
         }
         applyConfig(RawFilterKey, filters);
 
-        QMetaObject::invokeMethod(m_canIO, "listen", Qt::QueuedConnection);
+        QMetaObject::invokeMethod(m_canIO, &PassThruCanIO::listen, Qt::QueuedConnection);
 
         setState(ConnectedState);
     } else {
@@ -268,6 +267,7 @@ void PassThruCanBackend::ackCloseFinished()
 
 void PassThruCanBackend::applyConfig(QCanBusDevice::ConfigurationKey key, const QVariant &value)
 {
-    QMetaObject::invokeMethod(m_canIO, "applyConfig", Qt::QueuedConnection,
-                              Q_ARG(int, key), Q_ARG(QVariant, value));
+    QMetaObject::invokeMethod(m_canIO,
+                              [this, key, value] { m_canIO->applyConfig(key, value); },
+                              Qt::QueuedConnection);
 }
